--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.fxsampler-1.0.10.jar=libs/fxsampler-1.0.10.jar
 file.reference.gson-2.6.2-javadoc.jar=libs/gson-2.6.2-javadoc.jar
 file.reference.jfoenix.jar=libs/jfoenix.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
+file.reference.TrayNotification.jar=C:\\Users\\pacha\\Desktop\\PIFINAL\\PIJAVA v1\\lib\\TrayNotification.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.fxsampler-1.0.10.jar}:\
     ${file.reference.gson-2.6.2-javadoc.jar}:\
     ${file.reference.jfoenix.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.TrayNotification.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
