--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -36,7 +36,7 @@ file.reference.fxsampler-1.0.10.jar=libs/fxsampler-1.0.10.jar
 file.reference.gson-2.6.2-javadoc.jar=libs/gson-2.6.2-javadoc.jar
 file.reference.jfoenix.jar=libs/jfoenix.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
-file.reference.TrayNotification.jar=C:\\Users\\pacha\\Desktop\\PIFINAL\\PIJAVA v1\\lib\\TrayNotification.jar
+file.reference.TrayNotification.jar-1=libs/TrayNotification.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -50,7 +50,7 @@ javac.classpath=\
     ${file.reference.gson-2.6.2-javadoc.jar}:\
     ${file.reference.jfoenix.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.TrayNotification.jar}
+    ${file.reference.TrayNotification.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -94,7 +94,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=Views.WoldCupApp18
+javafx.main.class=woldcupapp18.WoldCupApp18
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
