--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=WoldCupApp18
+application.title=WolrdCupApp18
 application.vendor=apple
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +25,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/WoldCupApp18.jar
+dist.jar=${dist.dir}/WolrdCupApp18.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -35,6 +35,7 @@ file.reference.fontawesomefx-8.9.jar=libs/fontawesomefx-8.9.jar
 file.reference.fxsampler-1.0.10.jar=libs/fxsampler-1.0.10.jar
 file.reference.gson-2.6.2-javadoc.jar=libs/gson-2.6.2-javadoc.jar
 file.reference.jfoenix.jar=libs/jfoenix.jar
+file.reference.jsoup-1.11.2.jar=libs/jsoup-1.11.2.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
 file.reference.TrayNotification.jar-1=libs/TrayNotification.jar
 includes=**
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.gson-2.6.2-javadoc.jar}:\
     ${file.reference.jfoenix.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.TrayNotification.jar-1}
+    ${file.reference.TrayNotification.jar-1}:\
+    ${file.reference.jsoup-1.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
