--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.controlsfx-8.40.14.jar=libs/controlsfx-8.40.14.jar
 file.reference.controlsfx-samples-8.40.14.jar=libs/controlsfx-samples-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=libs/fontawesomefx-8.9.jar
 file.reference.fxsampler-1.0.10.jar=libs/fxsampler-1.0.10.jar
+file.reference.GMapsFX-2.0.9.jar=C:\\Users\\Bich\\Desktop\\GMapsFX-2.0.9.jar
 file.reference.gson-2.6.2-javadoc.jar=libs/gson-2.6.2-javadoc.jar
 file.reference.jfoenix.jar=libs/jfoenix.jar
 file.reference.jsoup-1.11.2.jar=libs/jsoup-1.11.2.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.jfoenix.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.TrayNotification.jar-1}:\
-    ${file.reference.jsoup-1.11.2.jar}
+    ${file.reference.jsoup-1.11.2.jar}:\
+    ${file.reference.GMapsFX-2.0.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
