--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.jar=${dist.dir}/WolrdCupApp18.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.client-2.0.0.jar=C:\\Users\\pacha\\Desktop\\PIFINAL\\PIJAVA v1\\lib\\client-2.0.0.jar
 file.reference.client-3.3.0-javadoc.jar=libs\\client-3.3.0-javadoc.jar
 file.reference.client-3.3.0.jar=libs\\nexmo\\client-3.3.0.jar
 file.reference.commons-codec-1.9.jar=libs\\nexmo\\commons-codec-1.9.jar
@@ -52,7 +51,6 @@ file.reference.java-jwt-2.2.1.jar=libs\\nexmo\\java-jwt-2.2.1.jar
 file.reference.jfoenix.jar=libs/jfoenix.jar
 file.reference.jsoup-1.11.2.jar=libs/jsoup-1.11.2.jar
 file.reference.mail.jar=libs\\mail.jar
-file.reference.mail.jar-1=C:\\Users\\pacha\\Desktop\\PIFINAL\\PIJAVA v1\\lib\\mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=libs/mysql-connector-java-5.1.23-bin.jar
 file.reference.TrayNotification.jar-1=libs/TrayNotification.jar
 includes=**
@@ -70,9 +68,19 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.TrayNotification.jar-1}:\
     ${file.reference.jsoup-1.11.2.jar}:\
-    ${file.reference.mail.jar-1}:\
-    ${file.reference.client-2.0.0.jar}:\
-    ${file.reference.GMapsFX-2.0.9.jar-1}
+    ${file.reference.GMapsFX-2.0.9.jar-1}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.client-3.3.0.jar}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-lang3-3.5.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpclient-4.5.jar}:\
+    ${file.reference.httpcore-4.4.1.jar}:\
+    ${file.reference.jackson-annotations-2.8.0.jar}:\
+    ${file.reference.jackson-core-2.8.4.jar}:\
+    ${file.reference.jackson-databind-2.8.4.jar}:\
+    ${file.reference.java-jwt-2.2.1.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.client-3.3.0.jar}:\
     ${file.reference.commons-codec-1.9.jar}:\
