--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /WoldCupApp18/dist/
 /JavaApplication5/nbproject/private/
 *.properties
+WoldCupApp18/nbproject/project.properties
+WoldCupApp18/nbproject/project.properties
