--- a/WoldCupApp18/nbproject/project.properties
+++ b/WoldCupApp18/nbproject/project.properties
@@ -96,7 +96,19 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.TrayNotification.jar-1}:\
     ${file.reference.jsoup-1.11.2.jar}:\
-<<<<<<< HEAD
+    ${file.reference.client-3.3.0.jar}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-lang3-3.5.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpclient-4.5.jar}:\
+    ${file.reference.httpcore-4.4.1.jar}:\
+    ${file.reference.jackson-annotations-2.8.0.jar}:\
+    ${file.reference.jackson-core-2.8.4.jar}:\
+    ${file.reference.jackson-databind-2.8.4.jar}:\
+    ${file.reference.java-jwt-2.2.1.jar}:\
+    ${file.reference.GMapsFX-2.0.9.jar}:\
+    ${file.reference.mail.jar}
     ${file.reference.jsoup-1.11.2.jar}:\
     ${file.reference.GMapsFX-2.0.9.jar}:\
     ${file.reference.mail.jar}:\
