WorldCupApp Mobile Plateform Empty

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 *.properties
 WoldCupApp18/nbproject/project.properties
 WoldCupApp18/nbproject/project.properties
+/MobileWorldCup/nbproject/private/
