Commit Game module Version 0 (not functional)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 WoldCupApp18/nbproject/project.properties
 WoldCupApp18/nbproject/project.properties
 /MobileWorldCup/nbproject/private/
+/MobileWorldCup/build/
