--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ WoldCupApp18/nbproject/project.properties
 WoldCupApp18/nbproject/project.properties
 /MobileWorldCup/nbproject/private/
 /MobileWorldCup/build/
+/Demo/build/
+/Demo/nbproject/private/
