--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ WoldCupApp18/nbproject/project.properties
 /MobileWorldCup/build/
 /Demo/build/
 /Demo/nbproject/private/
+/WorldCup/nbproject/private/
